--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "supabase"],
+  "exclude": ["supabase"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
